[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"



[project]
name = "ai-trip-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"langchain",
"langchain_community",
"langchain-experimental",
"fastapi",
"python-dotenv",
"streamlit",
"uvicorn",
"pydantic",
"httpx",
"requests",
"langchain_google_community",
"langchain_tavily",
"langchain_groq",
"langchain_openai",
"langgraph",
"langchain-google-community"]
